# live_2d_clone

./: Cargo.toml
assets/default/materials/: default.mtl
assets/psd/: mark_free_Import.psd
assets/shaders/: depth.wgsl  light.wgsl  shader.wgsl  shadow.wgsl  test.wgsl  view.wgsl
libs/specs-hierarchy-0.6.0/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
libs/specs-hierarchy-0.6.0/src/: lib.rs
src/: actor.rs  buffer_update.rs  camera.rs  camera_controller.rs  camera_uniform.rs  collider.rs  fs.rs  instance_uniform.rs  light.rs  main.rs  model.rs  rigid_body.rs  sprite_selector.rs  state.rs  texture.rs  type_def.rs
