[package]
name = "live_2d_clone"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.0"
winit = "0.26.1"
env_logger = "0.9"
log = "0.4.14"
wgpu = "0.12"
pollster = "0.2.5"
ahash = "0.7.6"
#nalgebra = "0.30.1"
rapier2d = { version = "0.11.1", features = ["simd-stable"] }
#parry3d = "0.8.0"
specs = { version = "0.17.0", features = ["specs-derive", "shred-derive", "storage-event-control"] }
#tokio = { version = "1.15.0", features = ["rt-multi-thread", "full"] }
#bytes = "1.1.0"
#parking_lot = "0.11.2"
dashmap = "5.1.0"
#async-channel = "1.6.1"
rayon = "1.5.1"
#async-stream = "0.3.2"
bytemuck = { version = "1.7.3", features = ["derive"] }
anyhow = "1.0.53"
tobj = "3.2.0"
palette = "0.6.0"
specs-hierarchy = {path = "./libs/specs-hierarchy-0.6.0"}
num = "0.4.0"
serde = "1.0.136"
smaa = "0.6.0"
psd = "0.3.0"

[build-dependencies]
anyhow = "1.0.53"
fs_extra = "1.2"
glob = "0.3"
